fix: adjust body padding and overflow properties in index.css

--- a/frontend/my-vue-app/src/index.css
+++ b/frontend/my-vue-app/src/index.css
@@ -1,10 +1,13 @@
 body {
     margin: 0;
     padding: 0;
+    padding-right: 0 !important;
     font-family: "Poppins", sans-serif;
+    overflow: auto !important;
+    padding-right: 0 !important;
   }
   
   main {
-    padding-top: 120px; /* Adjust based on the navbar height */
+    padding-top: 120px;
   }
   
